log
Thu 05 Oct 2023 09:12:20 PM UTC: 
 tests:  0|5
total_score: 0/70
e5da5ed
Thu 05 Oct 2023 09:23:45 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:52:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘return’
   52 |     return 1;
      |     ^~~~~~
sudoku.c:49:7: error: unused variable ‘miniSudo’ [-Werror=unused-variable]
   49 |   int miniSudo[9][9] = {0};
      |       ^~~~~~~~
sudoku.c:48:7: error: unused variable ‘colu’ [-Werror=unused-variable]
   48 |   int colu[9][9] = {0};
      |       ^~~~
sudoku.c:47:7: error: unused variable ‘fila’ [-Werror=unused-variable]
   47 |   int fila[9][9] = {0};
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
de300cf
Thu 05 Oct 2023 09:23:55 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:50:3: error: expected ‘,’ or ‘;’ before ‘int’
   50 |   int num;
      |   ^~~
sudoku.c:49:7: error: unused variable ‘miniSudo’ [-Werror=unused-variable]
   49 |   int miniSudo[9][9] = {0}
      |       ^~~~~~~~
sudoku.c:48:7: error: unused variable ‘colu’ [-Werror=unused-variable]
   48 |   int colu[9][9] = {0};
      |       ^~~~
sudoku.c:47:7: error: unused variable ‘fila’ [-Werror=unused-variable]
   47 |   int fila[9][9] = {0};
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
93a2974
Thu 05 Oct 2023 09:23:59 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:50:7: error: unused variable ‘num’ [-Werror=unused-variable]
   50 |   int num;
      |       ^~~
sudoku.c:49:7: error: unused variable ‘miniSudo’ [-Werror=unused-variable]
   49 |   int miniSudo[9][9] = {0};
      |       ^~~~~~~~
sudoku.c:48:7: error: unused variable ‘colu’ [-Werror=unused-variable]
   48 |   int colu[9][9] = {0};
      |       ^~~~
sudoku.c:47:7: error: unused variable ‘fila’ [-Werror=unused-variable]
   47 |   int fila[9][9] = {0};
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
728aa3e
Thu 05 Oct 2023 09:24:34 PM UTC: 
 sudoku.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  3|4
total_score: 20/70
ca17fac
Thu 05 Oct 2023 09:24:59 PM UTC: 
 sudoku.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  3|4
total_score: 20/70
91b7415
Thu 05 Oct 2023 09:25:13 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘read_file’:
sudoku.c:22:3: error: parameter ‘n’ is initialized
   22 |   Node* n = createNode();
      |   ^~~~
sudoku.c:23:3: error: parameter ‘file’ is initialized
   23 |   FILE* file = fopen (file_name, "r");
      |   ^~~~
sudoku.c:23:23: error: ‘file_name’ undeclared (first use in this function)
   23 |   FILE* file = fopen (file_name, "r");
      |                       ^~~~~~~~~
sudoku.c:23:23: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:25:3: error: expected declaration specifiers before ‘for’
   25 |   for(i=0;i<9;i++){
      |   ^~~
sudoku.c:25:11: error: expected declaration specifiers before ‘i’
   25 |   for(i=0;i<9;i++){
      |           ^
sudoku.c:25:15: error: expected declaration specifiers before ‘i’
   25 |   for(i=0;i<9;i++){
      |               ^
sudoku.c:32:3: error: expected declaration specifiers before ‘fclose’
   32 |   fclose (file);
      |   ^~~~~~
sudoku.c:33:3: error: expected declaration specifiers before ‘return’
   33 |   return n;
      |   ^~~~~~
sudoku.c:34:1: error: expected declaration specifiers before ‘}’ token
   34 | }
      | ^
sudoku.c:36:25: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   36 | void print_node(Node* n){
      |                         ^
sudoku.c:46:22: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   46 | int is_valid(Node* n){
      |                      ^
sudoku.c:75:29: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   75 | List* get_adj_nodes(Node* n){
      |                             ^
sudoku.c:81:22: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   81 | int is_final(Node* n){
      |                      ^
sudoku.c:85:36: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   85 | Node* DFS(Node* initial, int* cont){
      |                                    ^
test.c:7:34: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
    7 | char * _strdup(const char * str) {
      |                                  ^
test.c:14:1: error: parameter ‘test_id’ is initialized
   14 | int test_id = -1;
      | ^~~
test.c:17:14: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   17 | int success(){
      |              ^
test.c:22:24: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   22 | void err_msg(char* msg){
      |                        ^
test.c:29:23: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   29 | void ok_msg(char* msg){
      |                       ^
test.c:35:25: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   35 | void info_msg(char* msg){
      |                         ^
test.c:40:75: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   40 | int test_suite(int(*test)(), char* msg, int max_score, int id, int req_id){
      |                                                                           ^
test.c:57:16: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   57 | int adj_test1(){
      |                ^
test.c:106:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  106 | int test_isvalid(){
      |                   ^
test.c:150:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  150 | int test_mod_adj(){
      |                   ^
test.c:176:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  176 | int test_isfinal(){
      |                   ^
test.c:201:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  201 | int test_dfs(){
      |               ^
test.c:245:36: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  245 | int main( int argc, char *argv[] ) {
      |                                    ^
In file included from test.c:5:
sudoku.c:21:7: error: old-style parameter declarations in prototyped function definition
   21 | Node* read_file (char* file_name)
      |       ^~~~~~~~~
test.c:263: error: expected ‘{’ at end of input
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
cc1: all warnings being treated as errors
Compilation failed
f8ea12e
